--- a/style.css
+++ b/style.css
@@ -1,13 +1,25 @@
 .calculator {
     background: orange;
     margin: 0 auto;
-    width: 33%;
+    width: 450px;
     display: flex;
     flex-direction: column;
     border-radius: 35px;
 }
 
-input[type="text"] {
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+input[type="number"] {
     width: 70%;
     padding: 15px;
     border: none;
@@ -28,8 +40,8 @@ input[type="text"] {
    flex-wrap: wrap;
    gap: 5px;
    padding: 30px;
-   /*background: black;*/
-   margin-right: 18px;
+   
+  
    
 }
 input[type="button"] {
